--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "node-static": "~0.7.1",
     "socket.io": "~0.9.16",
-    "peer": "*"
+    "peer": "*",
+    "restify": "^2.6.3"
   }
 }
